src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required only if survey question is a vote block type</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Info_Allowed_Dates__c</fullName>
        <description>Enter dates in YYYY-MM-DD format separated by commas, semicolons, or newlines.</description>
        <label>Add Info Allowed Dates</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Control__c</fullName>
        <description>Controls options, lables, or behaviors for Add Info Types.
For &quot;Numeric Additive&quot;, it is the label.
For &quot;Picklist&quot;, it is the list of options.</description>
        <label>Add Info Control</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Type__c</fullName>
        <description>Numeric Additive is like surveys collected</description>
        <label>Add Info Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                    <default>true</default>
                    <label>Not Specified</label>
                </value>
                <value>
                    <fullName>Numeric Additive</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowed_Responses__c</fullName>
        <defaultValue>&quot;yes&quot;</defaultValue>
        <description>The responses allowed in a Survey Response.  Separate allowed responses by a newline character.</description>
        <label>Allowed Responses</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collected_By_Label__c</fullName>
        <description>If you want to use a different label for MO rather than &quot;Collected By&quot; enter that label in this field.</description>
        <label>Collected By Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Entry_Page__c</fullName>
        <description>Custom VF Page for Data Entry</description>
        <label>Custom Entry Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Survey Description</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>What date did this survey question come online?</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Staff_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Staff Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vote_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this survey code is a Vote Block (ie, list of time ranges)</inlineHelpText>
        <label>Is Vote Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ldr_Assm_Add_Info_Min__c</fullName>
        <description>The minimum Add Info Numeric Value for a Leadership Assessment.</description>
        <label>Ldr Assmnt Add Info Num Min</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ldr_Assm_Vals__c</fullName>
        <description>Enter the first letter of the responses that mark this person as an External/Repr/COOL Leader.  E.g. &quot;12&quot; considers anyone who has a Response Value of &quot;1. Leader&quot; or &quot;2. Supporter&quot; as a Leader.  If the Survey Question is not a leadership assessment leave this field blank.</description>
        <label>Ldr Assmnt Values</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_to_Petition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to see if Petition is linked to Campaign</description>
        <label>Linked to Petition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_to_Recruits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this SQ link to the Recruits custom object?</description>
        <label>Linked to Recruits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MO_Show_Collected_Date_Label__c</fullName>
        <label>MO Show Collected Date Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MO_Show_Collected_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, show Collected Date in MO.</description>
        <label>MO Show Collected Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mbr_Ldr_Portal_Access__c</fullName>
        <label>Mbr Ldr Portal Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Populated_by_Question_Response_Field__c</fullName>
        <label>Populated by Question Response Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populated_by_Questionnaire_Name__c</fullName>
        <description>The Prefix of the Questionnaire Name (Survey_Name__c) for this Survey Question.</description>
        <label>Populated by Questionnaire Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populated_by_Questionnaire__c</fullName>
        <label>Populated by Questionnaire</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Bargaining Ldr</fullName>
                </value>
                <value>
                    <fullName>Department Ldr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propagated_from_Cvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this Survey Question correspond to a Cvent Campaign?</description>
        <label>Propagated from Cvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Link_English__c</fullName>
        <description>If there is an online questionnaire, that link may go here.</description>
        <label>Questionnaire Link English</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Link_Spanish__c</fullName>
        <description>Questionnaire link, Spanish.</description>
        <label>Questionnaire Link Spanish</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SQ_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>SQ Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Scope of the survey question.  If the survey is scoped &quot;Global&quot;, it will be propagated to all a person&apos;s Contacts record.  If the survey is scoped &quot;Division&quot;, it will be propagated to all a person&apos;s Contacts record within the same Division.  If the survey is scoped &quot;Employer Only&quot; it will only affect the immediate Contact record.</description>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Employer Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Code__c</fullName>
        <description>Three letter Survey Code</description>
        <externalId>true</externalId>
        <label>Survey Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UHW_Campaign_Name__c</fullName>
        <formula>UHW_Campaign__r.Name</formula>
        <label>UHW Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHW_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>UHW Campaign</label>
        <referenceTo>UHW_Campaign__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>Survey_Code__c</columns>
        <columns>UHW_Campaign__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <label>SQ 2015</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>